--- a/css/style2.css
+++ b/css/style2.css
@@ -206,6 +206,7 @@ body {
 
 .container-fluid {
     background-color: #fdf6eac9;
+    padding: 70px 0px 70px 0px;
 }
 @keyframes fadeInDown {
     0% {
@@ -273,6 +274,7 @@ body {
     width: 25px;
     height: 25px;
     border: 6px solid #f5e9d4;
+    background: #f5e9d4;
     border-radius: 50%;
     background: #da853d;
     right: -12px;
@@ -288,7 +290,8 @@ body {
     right: -4px;
     width: 10px;
     height: 100px;
-    border-right: 10px solid #f5e9d4;
+    background: #f5e9d4;
+    border-right: 6px solid #f5e9d4;
     top: 0;
     z-index: -1;
     box-sizing: border-box !important;
@@ -332,6 +335,7 @@ body {
     width: 10px;
     height: 100%;
     background: #f5e9d4;
+    border: 6px solid #f5e9d4;
     top: 0;
     box-sizing: border-box !important;
     text-decoration: inherit;
@@ -447,8 +451,8 @@ body {
 
 .ourProcessIcon svg{
     fill: currentColor;
-    height: 1em;
-    width: 1em; 
+    height: 2em;
+    width: 2em; 
     overflow: hidden;
     vertical-align: middle;
 }
@@ -612,8 +616,8 @@ body {
 
 .ourProcessIcon2 svg{
     fill: currentColor;
-    height: 1em;
-    width: 1em;
+    height: 2em;
+    width: 2em;
     overflow: hidden;
     vertical-align: middle;
 }
@@ -701,11 +705,3 @@ body {
     }
 }
 
-.ourProcessStep1,
-.ourProcessStep3 {
-    animation-name: fadeInLeft;
-}
-.ourProcessStep2,
-.ourProcessStep4 {
-    animation-name: fadeInRight;
-}
