--- a/css/BlogAndUpcomingEvents.css
+++ b/css/BlogAndUpcomingEvents.css
@@ -391,8 +391,7 @@
 
     .blogElementImage svg {
         fill: currentColor;
-        height: 1em;
-        width: 1em;
+        width: 32px;
         overflow: hidden;
         vertical-align: middle;
     }
